# stars

./: .gitignore  LICENSE  README.md
.github/workflows/: daily-run.yml
docs/: README.md  README_EN.md
src/: .gitignore  env.example  main.py  pyproject.toml  requirements.txt  update_version.py
src/stars/: __init__.py  app.py  cli.py  config.py  exporter.py  github_api.py  openai_api.py
src/stars/i18n/: __init__.py  check_translations.py  languages.py  translate_utils.py  translator.py
src/stars/i18n/translations/: de.yaml  en.yaml  es.yaml  fr.yaml  ja.yaml  pt.yaml  ru.yaml  zh-CN.yaml  zh-TW.yaml
templates/: README.md  README_EN.md  github.md
versions/: stars-lileyzhao-latest.md  stars-lileyzhao-v25.04.27.md  stars-lileyzhao-v25.04.28.md  stars-lileyzhao-v25.05.01.md  stars-lileyzhao-v25.05.04.md  stars-lileyzhao-v25.05.09.md  stars-lileyzhao-v25.05.10.md
